k8s/overlays/dev/capacity-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-api-proxy
spec:
  replicas: 1
