k8s/overlays/dev/environment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-api-proxy
spec:
  template:
    spec:
      containers:
        - name: proxy
