k8s/overlays/dev/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-api-proxy
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
      nodePort: 30300
