k8s/overlays/dev/ingress-delete-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-api-proxy
$patch: delete
